# AzureSupportAgent

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: demo_catalog.py  main.py
backend/app/agent/: builtins.py  (+19 more)
backend/scripts/: validate_alerts_manager_live.py
backend/tests/: conftest.py  test_activity_alert_wizard.py  test_activity_log_diagnostic_settings.py  test_admin_demo.py  test_alert_analysis.py  test_alert_analysis_pricing.py  test_alert_rule_management.py  test_alerts_manager.py  test_alerts_manager_performance.py  test_alerts_manager_phase5.py  test_alerts_manager_planner_mvp.py  test_alerts_manager_sankey_scope_contract.py  test_app_registrations.py  test_architecture_designer.py  test_architecture_memory.py  test_architecture_rebuild_auth.py  test_architecture_trash.py  test_arm_mg_hierarchy.py  test_arm_rest_bridge.py  test_assessment_catalog.py  test_assessment_hardening.py  test_assessment_pdf.py  test_assessments_fleet.py  test_autopilot.py  test_autopilot_sculpt.py  test_backup_restore.py  test_backupdr_fleet.py  test_backupdr_sql.py  test_builtin_agents.py  test_builtin_tools.py  test_capability_matrix.py  test_case_law.py  test_cases.py  test_changeexplorer.py  test_changeexplorer_ai_optional.py  test_changeexplorer_identity.py  test_changeexplorer_nlquery.py  test_changeexplorer_security.py  test_cis_v5.py  test_claude_function_calls.py  (+75 more)
(+776 files in other folders)
