[project]
name = "azsupagent-backend"
version = "0.1.0"
description = "Azure Support Agent - backend API + orchestrator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "redis>=5.2",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "openai>=1.54",
    "mcp>=1.1",
    "python-multipart>=0.0.12",
    "croniter>=2.0",
    "tzdata>=2024.1",
    "boto3>=1.35",
    "asyncssh>=2.14",
    "azure-servicebus>=7.12",
    "argon2-cffi>=23.1",
    "PyJWT>=2.10",
    "cryptography>=42.0",
    "lxml>=5.0",
    "xhtml2pdf>=0.2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Fast default run: the heavier / lower-frequency suites are auto-tagged ``slow`` in
# tests/conftest.py and excluded by default so `pytest` builds & runs fast. Run the full
# suite with `pytest -m ""` (or just the heavy ones with `pytest -m slow`).
addopts = "-m 'not slow'"
markers = [
    "slow: heavier or lower-frequency suite, excluded from the fast default run",
]
